wb-mqtt-db (1.6.2) stable; urgency=medium

  * fix: RPC send min() and max() in RPCv1 and don't send in RPCv0
  * fix: add aggregation for min and max fields on average requests
  * fix: MinUnchangedInterval and MinInterval are in seconds now
  * fix: create log directory on daemon start

 -- Nikita Maslov <n.maslov@contactless.ru>  Tue, 19 Jul 2016 19:03:42 +0300

wb-mqtt-db (1.6.1) stable; urgency=medium

  * fix configuration schema for proper editor appearance

 -- Nikita Maslov <n.maslov@contactless.ru>  Wed, 13 Jul 2016 12:35:28 +0300

wb-mqtt-db (1.6) stable; urgency=medium

  * new configuration file format
  * bulk transactions to optimize database access
  * logging using gLog library

 -- Nikita Maslov <n.maslov@contactless.ru>  Tue, 05 Jul 2016 13:21:31 +0300

wb-mqtt-db (1.5) stable; urgency=medium

  * change get_channel output format from array to map
  * add get_channel RPC function
  * add SIGTERM/SIGINT handler for graceful exit

 -- Nikita Maslov <n.maslov@contactless.ru>  Thu, 30 Jun 2016 12:06:27 +0300


wb-mqtt-db (1.4) stable; urgency=medium

  * significant query performance improvement
  * retained messages are ignored

 -- Evgeny Boger <boger@contactless.ru>  Sat, 12 Mar 2016 23:56:29 +0300

wb-mqtt-db (1.3.4) stable; urgency=medium

  * fix deps

 -- Evgeny Boger <boger@contactless.ru>  Tue, 09 Feb 2016 20:48:29 +0300

wb-mqtt-db (1.3.3) stable; urgency=medium

  * remove debug print

 -- Evgeny Boger <boger@contactless.ru>  Tue, 09 Feb 2016 20:48:29 +0300

wb-mqtt-db (1.3.2) stable; urgency=medium

  * Moved schema files to /usr/share/wb-mqtt-confed/schemas

 -- Ivan Shvedunov <ivan4th@gmail.com>  Tue, 09 Feb 2016 11:03:34 +0300

wb-mqtt-db (1.3.1) stable; urgency=medium

  * add confed schema

 -- Evgeny Boger <boger@contactless.ru>  Thu, 26 Nov 2015 22:00:24 +0300

wb-mqtt-db (1.3) stable; urgency=medium

  * use internal ids instead of channel names
  * API change. Support for min_interval
